<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="label_active">Aktif</string>
    <string name="label_inactive">Tidak Aktif</string>
    <string name="label_home_partnership">Kemitraan Perusahaan</string>
    <string name="label_banner_title_join_partnership">Makin Untung,\nGabung Kemitraan!</string>
    <string name="label_banner_desc_join_partnership">#NegeriBerdaya #PerikananJaya</string>
    <string name="action_home_banner_join_partnership">Gabung Mitra</string>
    <string name="label_partner_agree">Mitra Perusahaan Agree</string>
    <string name="label_finance_agree">Agree Modal</string>
    <string name="label_title_in_banner_finance_agree">Ajukan Modal Budi Daya</string>
    <string name="label_sub_title_in_banner_finance_agree">Tingkatkan kualitas bisnis Anda\ndengan mengajukan pinjaman modal.</string>
    <string name="label_home_faq_title">Masih ragu dan ada pertanyaan?</string>
    <string name="label_home_faq_desc">Tenang, kami ada disini untuk membantu bisnis agriculture Anda!</string>
    <string name="label_learn_now">Pelajari Sekarang</string>
    <string name="title_setting">Pengaturan</string>
    <string name="label_see_profile">Lihat Detail Profil</string>
    <string name="label_help">Bantuan</string>
    <string name="label_about_agree">Tentang Agree</string>
    <string name="label_help_center">Pusat Bantuan</string>
    <string name="label_security">Keamanan</string>
    <string name="label_logout">Keluar Akun</string>
    <string name="label_see_detail">Lihat Detail</string>
    <string name="label_title_empty_article">Tidak Ada Artikel</string>
    <string name="label_title_empty_list_vessel">Belum Ada Area Terdaftar</string>
    <string name="error_load_subsector">Gagal memuat Sub Sector</string>
    <string name="label_try_again">Coba Lagi</string>
    <string name="label_size">(%sHa)</string>
    <string name="label_location_area">%s, %sHa</string>
    <string name="label_list_subvessel">List Sub Area</string>
    <string name="label_list_vessel">List Area</string>
    <string name="label_no_partnered_commodities_yet">Belum ada komoditas yang dimitrakan</string>
    <string name="label_logout_dialog">Yakin ingin keluar dari akun?</string>
    <string name="action_cancel">Batal</string>
    <string name="action_yes">Ya</string>
    <string name="label_farmer">Peternak</string>
    <string name="title_location_area">Luas Area</string>
    <string name="title_used_area_surface">Luas Digunakan</string>
    <string name="label_size_area">%sHa</string>
    <string name="menu_detail_notifications">Detail Notifikasi</string>
    <string name="sample_sub_notification">Kemitraan</string>
    <string name="sample_date_notification">22 Agustus 2022 11:20</string>
    <string name="sample_company_sender">PT. Mitra Desa Pamarican</string>
    <string name="sample_description_detail_notification">Halo, Mitra Agree \n\ndeskripsi</string>
    <string name="label_see_detail_button">Lihat Selengkapnya</string>
    <string name="label_thank_you">Terima Kasih</string>
    <string name="label_state">Status</string>
    <string name="sample_registration_success">Pendaftaran Berhasil</string>
    <string name="sample_main_detail_notification">Kemitraan berhasil didaftarkan, silakan menunggu hasil review dari perusahaan.</string>
    <string name="label_need_help">Butuh Bantuan?</string>
    <string name="label_visit_cs_agree">Kunjungi pusat bantuan agree\nyuk!</string>
    <string name="sample_notification_description">Kemitraan berhasil didaftarkan, silahkan menunggu hasil review dari perusahaan.</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_partnership">Kemitraan</string>
    <string name="menu_monitoring">Monitoring</string>
    <string name="menu_notifications">Notifikasi</string>
    <string name="menu_settings">Pengaturan</string>
    <string name="label_empty_list_notification">Belum Ada Notifikasi</string>
    <string name="label_description_empty_list_notification">Belum ada pesan baru yang tersedia saat ini</string>
    <string name="label_field_assistant_with_data">Field Assistant: %s</string>
    <string name="label_commodity">Komoditas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_see_more_loan_package">Lihat Paket Permodalan</string>
    <string name="label_desc_more_loan_active">Lihat Semua\nPinjaman Aktif</string>
    <string name="dotted_line_description">Dotted Line</string>
    <string name="smartfarming_label">Smart Farming</string>
    <string name="lbl_cultivator_loan_active">Petani</string>
    <string name="lbl_borrower_loan_active">Peminjam</string>
    <string name="label_smartfarming_first_coachmark_description">Untuk menampilkan Sub Area yang sudah terpasang IoT, dapat melalui fitur diatas.</string>
    <string name="label_smartfarming_second_coachmark_description">Sub Area yang sudah terpasang IoT ditandai dengan “Smart Farming”</string>
    <string name="action_continue">Lanjut</string>
    <string name="action_done">Selesai</string>
    <string name="label_see_more_loan_active_home_page">Lihat Semua\nPinjaman Aktif</string>
    <string name="label_see_more_cultivator">Lihat 2 lainnya</string>
    <string name="label_error_title_home_partnership">Gagal data</string>
    <string name="label_error_desc_home_partnership">Data mitra perusahaan agree gagal dimuat, silahkan coba lagi nanti!</string>
    <string name="label_title_offline_banner_home">Anda sedang dalam keadaan offline mode</string>
    <string name="label_desc_offline_banner_home">Fitur ini hanya dapat digunakan untuk offline monitoring</string>
    <string name="title_lost_connection">Koneksi Internet Anda Terputus</string>
    <string name="title_desc_connection">Silakan cek koneksi internet Anda atau beralih \nke mode offline</string>
    <string name="title_btn_offline">Coba Fitur Offline Monitoring</string>
    <string name="title_btn_online">Coba Online Kembali</string>
    <string name="title_lost_connection_partnership">Terjadi kesalahan dalam memuat data mitra perusahaan, silakan muat ulang kembali</string>
    <string name="title_btn_reload">Muat Ulang</string>
    <string name="title_lost_connection_agreepedia">Terjadi kesalahan dalam memuat data agreepedia, silakan muat ulang kembali</string>
    <string name="label_service_settings">Pengaturan Layanan</string>
    <string name="label_error_filter_offline_mode">Filter gagal dimuat saat mode offline</string>
</resources>