<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.menu.notifications.detail.DetailNotificationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.telkom.legion.component.toolbar.LgnToolbarWhite
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_detail_notifications"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.telkom.legion.component.viewstate.LgnViewState
        android:id="@+id/msvDetail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        app:loadingView="@layout/layout_shimmer_detail_notification"
        app:viewState="content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/clButtonBottomContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_8dp">

                    <TextView
                        android:id="@+id/tvDetailTitle"
                        style="@style/BodyLargeSemiBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/sample_sub_notification" />

                    <TextView
                        android:id="@+id/tvDate"
                        style="@style/CaptionLargeRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_16dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/black_font"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
                        tools:text="@string/sample_date_notification" />

                    <View
                        android:id="@+id/viewLine"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginVertical="@dimen/dimen_16dp"
                        android:background="@color/black_300"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

                    <TextView
                        android:id="@+id/tvSubTitle"
                        style="@style/BodyLargeSemiBold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_16dp"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/viewLine"
                        tools:text="@string/sample_company_sender" />

                    <TextView
                        android:id="@+id/tvGreeting"
                        style="@style/BodySmallRegular"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_16dp"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        android:gravity="start"
                        android:textColor="@color/black_font"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
                        tools:text="@string/sample_description_detail_notification" />

                    <ViewStub
                        android:id="@+id/vsContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/dimen_16dp"
                        android:layout="@layout/layout_container_message_notification"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/tvGreeting"
                        tools:layout_editor_absoluteX="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clButtonBottomContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/agr_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.telkom.legion.component.button.fill.LgnPrimaryFitButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24dp"
                    android:layout_marginVertical="@dimen/dimen_24dp"
                    android:text="@string/label_see_detail_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.telkom.legion.component.viewstate.LgnViewState>
</androidx.constraintlayout.widget.ConstraintLayout>
