<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/black_100"
    tools:context=".presentation.menu.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.telkom.legion.component.toolbar.LgnToolbarWhite
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_setting"
            app:hideBackButton="true"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.telkom.legion.component.viewstate.LgnViewState
        android:id="@+id/msvProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:loadingView="@layout/layout_shimmer_profile_container"
        app:viewState="content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp">

            <com.telkom.legion.component.image.LgnImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/dimen_32dp"
                android:layout_height="@dimen/dimen_32dp"
                android:radius="360dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_logo_primary"
                app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgProfile" />

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_12dp"
                android:textAppearance="?attr/bodySmallRegular"
                android:textColor="?attr/black"
                app:layout_constraintBottom_toTopOf="@+id/tvSeeProfile"
                app:layout_constraintEnd_toStartOf="@+id/imgLogo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                app:layout_constraintTop_toTopOf="@+id/imgProfile"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/tvSeeProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_6dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/label_see_profile"
                android:textAppearance="?attr/captionLargeBold"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/tvProfileName"
                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.telkom.legion.component.viewstate.LgnViewState>

    <LinearLayout
        android:id="@+id/offlineContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msvProfile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:text="@string/label_service_settings"
            android:textAppearance="?attr/bodySmallBold" />

        <TextView
            android:id="@+id/tvOfflineMonitoring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_12dp"
            android:text="@string/label_offline_monitoring"
            android:textAppearance="?attr/captionLargeRegular"
            android:textColor="@color/black_900"
            app:drawableEndCompat="@drawable/ic_chevron_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/helpContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offlineContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:text="@string/label_help"
            android:textAppearance="?attr/bodySmallBold" />

        <TextView
            android:id="@+id/tvAboutAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_12dp"
            android:text="@string/label_about_agree"
            android:textAppearance="?attr/captionLargeRegular"
            android:textColor="@color/black_900"
            app:drawableEndCompat="@drawable/ic_chevron_right" />

        <com.telkom.legion.component.dividers.LgnDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvHelpCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_12dp"
            android:text="@string/label_help_center"
            android:textAppearance="?attr/captionLargeRegular"
            android:textColor="@color/black_900"
            app:drawableEndCompat="@drawable/ic_chevron_right" />

        <com.telkom.legion.component.dividers.LgnDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTermsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_12dp"
            android:text="@string/label_tnc_checkbox_2"
            android:textAppearance="?attr/captionLargeRegular"
            android:textColor="@color/black_900"
            app:drawableEndCompat="@drawable/ic_chevron_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/securityContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helpContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:text="@string/label_security"
            android:textAppearance="?attr/bodySmallBold" />

        <TextView
            android:id="@+id/tvChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_12dp"
            android:text="@string/label_change_password"
            android:textAppearance="?attr/captionLargeRegular"
            android:textColor="@color/black_900"
            app:drawableEndCompat="@drawable/ic_chevron_right" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dimen_0dp"
        app:cardElevation="@dimen/dimen_0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/securityContainer">

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_10dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_19dp"
            android:text="@string/label_logout"
            android:textAppearance="?attr/captionLargeSemiBold"
            android:textColor="?attr/colorError"
            app:drawableStartCompat="@drawable/ic_logout" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
